title:Fixed Header and Dropdown Alignment

--- a/website/frontend/src/css/dropdown.css
+++ b/website/frontend/src/css/dropdown.css
@@ -1,22 +1,17 @@
 .dropdown {
     position: absolute;
-    top: 58px;
-    width: 100px;
-    transform: translateX(-45%);
+    right: 0;
+    top: 70px;
     background-color: black;
     border: 1px solid black;
     border-radius: 8px;
-    padding: 1rem;
-    overflow: hidden;
+    padding: .5rem;
+    text-align: center;
 }
-.menu-items {
-    height: 50px;
-    display: flex;
-    align-items: center;
-    border-radius: 8px;
-    transition: 500ms background;
-    padding: 0.5rem;
-}
-.menu-items:hover{
-    background-color: #525357;
+.navlist-item-user{
+    color: white;
+    text-decoration: none;
+    border: none;
+    font-size: 20px;
+    margin: 0px 10px;
 }
